# SC2AutoObserver

./: BuildErrors2.txt  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
